--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "template",
-  "version": "1.0.0",
+  "name": "ninshu-client-bot",
+  "version": "1.2.0",
   "main": "dist/index.js",
-  "repository": "https://github.com/blossomcommunity/template.git",
-  "author": "Jack LaFond <jack.lafond@icloud.com>",
+  "repository": "https://github.com/Leave-it-blank/Ninshu-Bot",
+  "author": "Leaveitblank",
   "license": "MIT",
   "devDependencies": {
     "@types/ioredis": "^4.22.0",
